Rebranding archivos varios

--- a/config/locales/app.es.yml
+++ b/config/locales/app.es.yml
@@ -420,7 +420,7 @@ sobre sus actividades.
 
 Para ejercer sus derechos de acceso, rectificación, cancelación y oposición, como
 cancelar su suscripción, modificar los datos de cobro o el importe y frecuencia de su
-aportación, podrá utilizar la web participa.podemos.info accediendo a su perfil personal
+aportación, podrá utilizar la web participa.masmadrid.org accediendo a su perfil personal
 mediante su nombre de usuario y contraseña.
 
 También podrá ejercer sus derechos solicitándolo por correo electrónico a la dirección
@@ -543,7 +543,7 @@ Requerimientos de las autoridades.</p>
           subtitle: "Contacto"
           text_html: "Información general: contacto@podemos.info <br> Incidencias inscripciones: partido@podemos.info <br> Protección de datos: lopd@podemos.info <br>"
       p2:
-        title: "Condiciones generales de acceso y uso de la web participa.podemos.info"
+        title: "Condiciones generales de acceso y uso de la web participa.masmadrid.org"
         p1:
           subtitle: "Usuarios y derecho de acceso"
           text_html: "
@@ -863,7 +863,7 @@ PODEMOS cumple con todas las medidas de seguridad para la protección de datos p
                     <p>Los documentos que nos envíes serán utilizados para verificar tu identidad y la exactitud de tus datos personales, de conformidad con lo dispuesto en el Reglamento General de Protección de Datos.</p>
                     <p>Estos documentos quedarán incorporados a tu ficha personal y no serán cedidos a terceras personas ni organismos públicos sin tu consentimiento expreso, excepto cuando la ley establezca la obligación de ceder estos datos a las autoridades.</p>
                     <p>Declaras y garantizas que los documentos que nos adjuntas son verdaderos, exactos, completos y actualizados, que has leído este aviso legal sobre protección de datos personales y que estás conforme con su contenido.</p>
-                    <p>Como persona inscrita en Podemos puedes acceder a la web de participación <a href='https://participa.podemos.info' target='_blank'>participa.podemos.info</a> y consultar y modificar directamente algunos de tus datos personales.</p>
+                    <p>Como persona inscrita en Podemos puedes acceder a la web de participación <a href='https://participa.masmadrid.org' target='_blank'>participa.masmadrid.org</a> y consultar y modificar directamente algunos de tus datos personales.</p>
                     <p>También puedes solicitar modificaciones, recibir información sobre el tratamiento de tus datos personales y ejercitar tus derechos enviando personalmente una petición, detallando el derecho que quieres ejercitar, por correo electrónico a la dirección <a href='mailto:lopd@podemos.info'>lopd@podemos.info</a> o por correo postal al domicilio social de Podemos, en la calle Zurita, núm. 21, CP 28012 MADRID.
                     <p>En ambos casos deberás acreditar tu identidad adjuntando una copia del documento legal de identificación que hayas utilizado para tu inscripción (DNI, NIE o pasaporte) o cualquier otro documento legal que permita acreditar de forma inequívoca tu identidad.</p>
                     <p>Si tienes alguna duda sobre el tratamiento de tus datos personales o quieres formular alguna reclamación puedes ponerte en contacto con el Delegado de Protección de Datos de Podemos a través de la dirección de correo electrónico <a href='mailto:protecciondedatos@podemos.info'>protecciondedatos@podemos.info</a></p>
