--- a/config/locales/devise.extra.es.yml
+++ b/config/locales/devise.extra.es.yml
@@ -27,7 +27,7 @@ es:
       sign_out: "Cerrar sesión"
       my_account: "Mi cuenta"
       back: "Volver"
-      forgot_password: "He olvidado mi contraseña"
+      forgot_password: "¿Has olvidado la contraseña?"
       confirmation_instructions: "¿No has recibido las instrucciones de confirmación?"
       unlock_instructions: "¿No has recibido las instrucciones de desbloqueo?"
       here: "aquí"
