--- a/config/locales/app.es.yml
+++ b/config/locales/app.es.yml
@@ -354,7 +354,7 @@ De conformidad con lo dispuesto en el artículo 16.3 de la Ley Orgánica de Prot
         hello: "Hola"
         welcome: "Bienvenida"
         lock:
-          p1: "Tu cuenta ha sido bloqueada por un número excesivo de intentos de inicio de sesión fallidos. Si no has sido tú, <a href='https://participa.masmadrid.org/soporte-votaciones/'>reporta la incidencia</a> para recibir ayuda."
+          p1: "Tu cuenta ha sido bloqueada por un número excesivo de intentos de inicio de sesión fallidos. Si no has sido tú, <a href='mailto:ayuda-tecnica@masmadrid.org'>reporta la incidencia</a> para recibir ayuda."
           p2: "Haz click en el link de aquí abajo para desbloquear tu cuenta:"
           p3: "Si no funciona el enlace prueba copiando y pegándolo en la barra de direcciones de tu navegador."
         confirm:
